--- a/src/components/box/style.css
+++ b/src/components/box/style.css
@@ -1,7 +1,8 @@
 .market-box {
     height: auto;
-    padding: 24px;
-    width: 296px;  
+    margin-top: 12px;
+    margin-bottom: 24px;    
+    padding: 24px;   
     background-color: var(--areaColor2);
     border-radius: 2px;
 }
