--- a/src/components/title/style.css
+++ b/src/components/title/style.css
@@ -4,3 +4,21 @@
     font-size: 13px;
     text-align: left;
 }
+
+.market-title.sm {
+    height: 18px;
+    line-height: 18px;
+    font-size: 13px;
+    text-align: left;
+    font-weight: 600;
+    color:var(--secondaryText)
+}
+
+.market-title.md {
+    height: 26px;
+    font-size: 20px;
+    line-height: 20px;
+    text-align: left;
+    color:var(--secondaryText)
+}
+
