fix lint and console errors

--- a/src/components/itemsFilter/style.css
+++ b/src/components/itemsFilter/style.css
@@ -1,24 +1,33 @@
 .market-items-filter {
-    width: auto;
-    height: 30px;  
-    border-radius: 2px;
-    display: flex;
-    justify-content: flex-start;
-    margin: 16px 0;
+  width: auto;
+  height: 30px;
+  border-radius: 2px;
+  display: flex;
+  justify-content: flex-start;
+  margin: 16px 0;
 }
 
 .market-items-filter-button {
-    width:60px;
-    height:30px;
-    line-height: 30px;  
-    font-size: 13px;
-    border-radius: 2px;
-    margin-right: 8px;
-    background-color: var(--tertiaryText);
-    color:var(--whiteText);
-    text-align: center;
+  width: 60px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 13px;
+  border-radius: 2px;
+  margin-right: 8px;
+  background-color: var(--areaColor5);
+  color: var(--whiteText);
+  text-align: center;
+  cursor: pointer;
 }
 
 .market-items-filter-button[status="active"] {
-    background-color: var(--themeColor);
+  background-color: var(--themeColor);
+}
+
+.market-items-filter-button[status="active"]:hover {
+  background-color: var(--themeColor);
+}
+
+.market-items-filter-button:hover {
+  background-color: var(--areaColor3);
 }
