--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 :root {
-  --themeColor: #1EA4CE;
-  --areaColor1: #FAFAFA;
+  --areaColor1: #fafafa;
   --areaColor2: #ffffff;
-  --areaColor3: #E0E0E0;
-  --areaColor4: #F4F4F4;
+  --areaColor3: #e0e0e0;
+  --areaColor4: #f4f4f4;
   --areaColor5: #ccc;
-  --themeDarkColor: #147594;
-  --secondaryText:#697488;
-  --tertiaryText: #A8A8A8;  
-  --whiteText: #ffffff; 
+  --themeColor: #1ea4ce;
+  --themeColorDark: #147594;
+  --themeColorLight: rgb(108, 211, 245);
+  --secondaryText: #697488;
+  --tertiaryText: #a8a8a8;
+  --whiteText: #ffffff;
 }
 
 .App {
