--- a/src/components/basketPanel/style.css
+++ b/src/components/basketPanel/style.css
@@ -1,93 +1,95 @@
 .market-basket-panel {
-    height: auto;
-    padding: 8px;   
-    background-color: var(--themeColor);
-    border-radius: 2px; 
+  height: auto;
+  padding: 8px;
+  background-color: var(--themeColor);
+  border-radius: 2px;
 }
 
 .market-basket-panel-body {
-    height: auto;
-    padding: 16px;  
-    background-color: var(--areaColor2);
-    border-radius: 2px;
+  height: auto;
+  padding: 16px;
+  background-color: var(--areaColor2);
+  border-radius: 2px;
 }
 
-.market-basket-panel-body-item {       
-    height:72px;
-    position: relative;
-    border-bottom: 2px solid var(--areaColor4);
+.market-basket-panel-body-item {
+  height: 72px;
+  position: relative;
+  border-bottom: 2px solid var(--areaColor4);
 }
 
-.market-basket-panel-body-item-label {   
-    position: absolute;
-    top:16px;
-    left:6px;   
-    font-size: 14px;
-    width:150px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+.market-basket-panel-body-item-label {
+  position: absolute;
+  top: 16px;
+  left: 6px;
+  font-size: 14px;
+  width: 150px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
-.market-basket-panel-body-item-price {    
-    position: absolute;
-    left:6px;
-    top:38px;
-    font-size: 14px;
-    color:var(--themeColor)
+.market-basket-panel-body-item-price {
+  position: absolute;
+  left: 6px;
+  top: 38px;
+  font-size: 14px;
+  color: var(--themeColor);
 }
 
-.market-basket-panel-body-item-minus {    
-    position: absolute;
-    right:64px;
-    top:20px;
-    width:32px;
-    height:32px;
-    background-image:url('../../assets/icons/icon-minus.png');
-    background-size: 11px 3px;
-    background-repeat: no-repeat;
-    background-position: center;
+.market-basket-panel-body-item-minus {
+  position: absolute;
+  right: 64px;
+  top: 20px;
+  width: 32px;
+  height: 32px;
+  background-image: url("../../assets/icons/icon-minus.png");
+  background-size: 11px 3px;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
 }
-.market-basket-panel-body-item-amount {    
-    position: absolute;
-    right:32px;
-    top:20px;
-    width:32px;
-    height:32px;
-    line-height: 32px;
-    background-color: var(--themeColor);
-    color:var(--whiteText);
-    align-items: center;
-    font-weight: 700;
-    font-size: 15px;
-    text-align: center;
+.market-basket-panel-body-item-amount {
+  position: absolute;
+  right: 32px;
+  top: 20px;
+  width: 32px;
+  height: 32px;
+  line-height: 32px;
+  background-color: var(--themeColor);
+  color: var(--whiteText);
+  align-items: center;
+  font-weight: 700;
+  font-size: 15px;
+  text-align: center;
 }
-.market-basket-panel-body-item-plus {    
-    position: absolute;
-    right:0px;
-    top:20px;
-    width:32px;
-    height:32px;
-    background-image:url('../../assets/icons/icon-plus.png');
-    background-size: 12px 12px;
-    background-repeat: no-repeat;
-    background-position: center;
+.market-basket-panel-body-item-plus {
+  position: absolute;
+  right: 0px;
+  top: 20px;
+  width: 32px;
+  height: 32px;
+  background-image: url("../../assets/icons/icon-plus.png");
+  background-size: 12px 12px;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
 }
-.market-basket-panel-body-total { 
-    width:100%;
-    height:51px;    
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 16px;
+.market-basket-panel-body-total {
+  width: 100%;
+  height: 51px;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 16px;
 }
-.market-basket-panel-body-total-box { 
-    width:92px;
-    height:48px;
-    line-height:48px;
-    border: 2px solid var(--themeColor);  
-    font-size: 14px;
-    color:var(--themeColor);
-    display: flex; 
-    justify-content: center;
-    align-items: center;  
+.market-basket-panel-body-total-box {
+  width: 92px;
+  height: 48px;
+  line-height: 48px;
+  border: 2px solid var(--themeColor);
+  font-size: 14px;
+  color: var(--themeColor);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
