--- a/src/components/link/style.css
+++ b/src/components/link/style.css
@@ -1,24 +1,23 @@
 .market-link {
-    width: auto;
-    height: 30px; 
-    line-height: 30px;
-    font-size: 13px; 
-    text-align: center;
-    padding: 0 15px;
-    color:var(--themeColor);
-    position: relative;
+  width: auto;
+  height: 30px;
+  line-height: 30px;
+  font-size: 13px;
+  text-align: center;
+  padding: 0 15px;
+  color: var(--themeColor);
+  position: relative;
 }
 
 .market-link::after {
-    content:'.';
-    font-size: 30px;
-    position: absolute;
-    top: -10px;
-    width: 30px;
-    height: 30px;
+  content: ".";
+  font-size: 30px;
+  position: absolute;
+  top: -10px;
+  width: 30px;
+  height: 30px;
 }
 
 .market-link:last-child:after {
-    content:'';    
+  content: "";
 }
-
