--- a/src/components/productTile/style.css
+++ b/src/components/productTile/style.css
@@ -1,65 +1,70 @@
 .market-product-tile {
-    width: 124px;
-    height: 225px;    
-    margin:12px;
-    position: relative;
+  width: 124px;
+  height: 225px;
+  margin: 12px;
+  position: relative;
 }
 
 .market-product-tile-image-box {
-    width: 124px;
-    height: 124px;    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 2px solid var(--areaColor5);
-    border-radius: 12px;
+  width: 124px;
+  height: 124px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--areaColor5);
+  border-radius: 12px;
 }
 
 .market-product-tile-image {
-    width: 92px;
-    height: 92px;   
-    background-color: var(--areaColor5);
-}
-
-.market-product-tile-price {  
-    margin-top:8px; 
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color:var(--themeColor);    
+  width: 92px;
+  height: 92px;
+  background-color: var(--areaColor5);
 }
 
 .market-product-tile-price {
-    width: 100%;
-    height: 23px;    
-    font-style: normal;
-    font-weight: 800;
-    font-size: 14px;
-    line-height: 20px;
-    color:var(--themeColor);
-    text-align: left;
+  margin-top: 8px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--themeColor);
+}
+
+.market-product-tile-price {
+  width: 100%;
+  height: 23px;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 20px;
+  color: var(--themeColor);
+  text-align: left;
 }
 
 .market-product-tile-label {
-    width: 100%;
-    height: 40px;    
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 20px;
-    text-align: left;
+  width: 100%;
+  height: 40px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 20px;
+  text-align: left;
 }
 
 .market-product-tile-button {
-    position: absolute;
-    width: 100%;
-    height: 22px;    
-    bottom: 0;
-    background-color: var(--themeColor);
-    color:var(--whiteText);
-    font-style: normal;
-    font-weight: 600;
-    font-size: 12px;
-    line-height: 20px;
-    border-radius: 2px;
-    text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 22px;
+  bottom: 0;
+  background-color: var(--themeColor);
+  color: var(--whiteText);
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 20px;
+  border-radius: 2px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.market-product-tile-button:hover {
+  background-color: var(--themeColorLight);
 }
