--- a/src/components/noResultBanner/style.css
+++ b/src/components/noResultBanner/style.css
@@ -4,6 +4,7 @@
   line-height: 50px;
   text-align: center;
   font-size: 16px;
+  font-family: marketFont400;
   color: var(--themeColor);
   border: 2px solid var(--themeColor);
 }
