--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,29 @@
   --whiteText: #ffffff;
 }
 
-.App {
-  text-align: center;
+@font-face {
+  font-family: marketFont300;
+  src: url("./assets/fonts/OpenSans-Light.ttf");
+}
+@font-face {
+  font-family: marketFont400;
+  src: url("./assets/fonts/OpenSans-Regular.ttf");
+}
+@font-face {
+  font-family: marketFont500;
+  src: url("./assets/fonts/OpenSans-Medium.ttf");
+}
+@font-face {
+  font-family: marketFont600;
+  src: url("./assets/fonts/OpenSans-SemiBold.ttf");
+}
+@font-face {
+  font-family: marketFont700;
+  src: url("./assets/fonts/OpenSans-Bold.ttf");
+}
+@font-face {
+  font-family: marketFont800;
+  src: url("./assets/fonts/OpenSans-ExtraBold.ttf");
 }
 
 .App-logo {
