--- a/src/components/checkboxGroup/style.css
+++ b/src/components/checkboxGroup/style.css
@@ -9,6 +9,7 @@
   border: 2px solid #e0e0e0;
   border-radius: 2px;
   font-size: 14px;
+  font-family: marketFont400;
   line-height: 44px;
   padding-left: 16px;
   color: var(--tertiaryText);
@@ -70,6 +71,7 @@
   height: 22px;
   line-height: 22px;
   font-size: 14px;
+  font-family: marketFont400;
   padding-left: 12px;
   width: 200px;
   text-align: left;
