--- a/src/components/itemsPager/style.css
+++ b/src/components/itemsPager/style.css
@@ -23,6 +23,7 @@
   height: 40px;
   line-height: 40px;
   font-size: 14px;
+  font-family: marketFont600;
   text-align: center;
   cursor: pointer;
   color: var(--secondaryText);
@@ -47,6 +48,7 @@
   height: 24px;
   line-height: 24px;
   font-size: 14px;
+  font-family: marketFont600;
   text-align: center;
 }
 
