--- a/src/components/productTile/style.css
+++ b/src/components/productTile/style.css
@@ -23,21 +23,19 @@
 
 .market-product-tile-price {
   margin-top: 8px;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 20px;
-  color: var(--themeColor);
-}
-
-.market-product-tile-price {
   width: 100%;
   height: 23px;
   font-style: normal;
-  font-weight: 800;
   font-size: 14px;
+  font-family: marketFont700;
   line-height: 20px;
   color: var(--themeColor);
   text-align: left;
+}
+
+.market-product-tile-price > span {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
 }
 
 .market-product-tile-label {
@@ -45,6 +43,7 @@
   height: 40px;
   font-weight: 600;
   font-size: 14px;
+  font-family: marketFont600;
   line-height: 20px;
   text-align: left;
 }
@@ -57,9 +56,9 @@
   background-color: var(--themeColor);
   color: var(--whiteText);
   font-style: normal;
-  font-weight: 600;
   font-size: 12px;
-  line-height: 20px;
+  font-family: marketFont600;
+  line-height: 22px;
   border-radius: 2px;
   text-align: center;
   cursor: pointer;
