refactor frontend structure and theme

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 :root {
-  --areaColor1: #fafafa;
+  --areaColor1: #e1eeff;
   --areaColor2: #ffffff;
   --areaColor3: #e0e0e0;
   --areaColor4: #f4f4f4;
-  --areaColor5: #ccc;
-  --themeColor: #1ea4ce;
+  --areaColor5: #bac4a8;
+  --themeColor: #139239;
   --themeColorDark: #147594;
   --themeColorLight: rgb(108, 211, 245);
   --secondaryText: #697488;
