edit mockdata and visuals

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   --areaColor3: #e0e0e0;
   --areaColor4: #f4f4f4;
   --areaColor5: #bac4a8;
-  --themeColor: #139239;
+  --themeColor: #ff8361;
   --themeColorDark: #147594;
   --themeColorLight: rgb(108, 211, 245);
   --secondaryText: #697488;
